<resources>
    <string name="app_name">WearEliquidCalc</string>
    <string name="DataFilename">recipe_data.dat</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="General_Btn_Submit">Submit</string>
    <string name="General_Btn_Add">+</string>
    <string name="General_Btn_Subtract">-</string>
    <string name="General_Btn_Save">-</string>

    <string name="Home_Msg_VG">VG: </string>
    <string name="Home_Msg_PG">PG: </string>
    <string name="Home_Msg_Nicotine">Nic: </string>

    <string name="Nic_Msg_Header">Nicotine</string>
    <string name="Nic_Msg_Nic_Base">Base Strength</string>
    <string name="Nic_Msg_Strenth">Strength Desired</string>

    <string name="VGPG_Msg_Header">VG/PG Ratio</string>

    <string name="title_activity_addflavour">AddFlavour_Activity</string>
    <string name="Flava_Msg_Header">Add Flavour</string>
    <string name="Flava_Msg_Add_Name">Name</string>
    <string name="Flava_Msg_Percentage">Percentage</string>

    <string name="title_activity_addrecipe">AddRecipe_Activity</string>
    <string name="txt_lbl_flavours">Flavours</string>
    <string name="txt_lbl_desired_nic">Desired Nic: %1$d</string>
    <string name="txt_lbl_base_nicotine">Base Nicotine: %1$d</string>
    <string name="txt_lbl_pg_vg_ratio">PG/VG Ratio: %1$d</string>
    <string name="txt_lbl_add_recipe">Add Recipe</string>

    <string name="title_activity_recipe_details_">RecipeDetails_Activity</string>
    <string name="recipe_details_header">Recipe Details</string>
    <string name="recipe_details_details">Recipe: %1$s%nRatio: %2$d%%%nBase nicotine: %3$d%%%nTarget nicotine: %4$d%%%n</string>
    <string name="recipe_details_details_flavour">Flavour %1$d: %2$s - %3$d%% %n</string>
    <string name="recipe_deleted">Recipe Deleted</string>

    <string name="title_activity_home_">Home_Activity</string>
    <string-array name="mainmenu_items">
        <item name="Home">VG/PG Ratio</item>
        <item name="Show Recipe">Nic Strength</item>
        <item name="Add Recipe">Add Flavour</item>
    </string-array>
    <string name="title_activity_confirm_action_">ConfirmAction_Activity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>
